server/src/analysis/stdlib/snapshots/janet_zed_server__analysis__stdlib__tests__reads_the_dump_without_a_checkout.snap
---
source: server/src/analysis/stdlib/tests.rs
expression: show_bindings(None)
---
----- DUMP
{"name":"map","kind":"function","doc":"(map f ind & inds)\n\nMap.","sm":["boot.janet",1098,1]}
{"name":"os/clock","kind":"cfunction","doc":null,"sm":["src/core/os.c",1743,3]}
{"name":"missing","kind":"macro","doc":"Not a signature.","sm":["src/core/nope.c",1,1]}
{"name":"pi","kind":"value","doc":null,"sm":null}

----- BINDINGS
map: Function (map f ind & inds)
os/clock: Cfunction
missing: Macro
pi: Value
if: Special (if condition when-true &opt when-false)
